# zyphtine

./: .gitignore  README.md  meson.build
include/: meson.build  phone.h
include/zyphtine/: syllable.h
src/: meson.build  syllable.c  utf8.c  utf8.h  vector.c  vector.h  zyphtine.h
